# Meal-E

Meal-E Backend/: .gitignore  genai.py  main.py  prompt.xml  pyproject.toml
Meal-E Frontend/SmartFridge/: AlertView.swift  Home.swift  Info.plist  InventoryView.swift  MealPlanView.swift  Questionnaire.swift  SettingsView.swift  SmartFridgeApp.swift  TabBar.swift
Meal-E Frontend/SmartFridge/Accessories/: LoadingScreen.swift  StatCard.swift
Meal-E Frontend/SmartFridge/DataManager/: APIManager.swift  DataManager.swift
Meal-E Frontend/SmartFridgeTests/: SmartFridgeTests.swift
Meal-E Frontend/SmartFridgeUITests/: SmartFridgeUITests.swift  SmartFridgeUITestsLaunchTests.swift
SmartFridge/: README.md  main.py  pyproject.toml
